# humanoid-twin-platform

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
apps/: control_panel.py  twin_studio.py
apps/dashboard/: server.py
apps/dashboard/static/: index.html
assets/: star1_fixed.urdf
configs/: star1.yaml  star1_visual.yaml
configs/motions/: bow.yaml  wave.yaml  weight_shift.yaml
matlab/: validate_torques.m
scripts/: march.py  run_squat.py  run_stand.py  step_experiments.py  validate_dynamics.py  view_live.py  walk_forward.py  walk_lipm.py
src/htp/: __init__.py  balance.py  config.py  keyframes.py  logger.py  mj_ik.py  pipeline.py  sim.py  stepper.py  trajectory.py
src/htp/walking/: README.md  __init__.py  controller.py  footsteps.py  leg_ik.py  preview.py  swing.py
tests/: test_keyframes.py  test_pipeline.py  test_stand.py  test_stepper.py  test_trajectory.py  test_weight_shift.py
